# ArchAngel

./: Dockerfile  backend-keypair.json  buy.js  mintWebhook.js  package-lock.json  package.json  vercel.json  wallet.js
.github/workflows/: azure-static-web-apps-witty-pebble-0be776f1e.yml
__tests__/: tradingBot.test.ts
__tests__/api/: sign-transaction.test.ts
app/: layout.tsx  page.tsx
app/components/: TradingBot.tsx
app/swap/: route.ts
cypress/integration/: trading-bot.spec.js
jupiter-dex/: Cargo.toml  Makefile  quote.ts  schema.graphql  substreams.yaml  swap.ts
jupiter-dex/proto/: jupiter.proto
jupiter-dex/src/: lib.rs
lib/: api-client.ts  birdeyeClient.ts  circuitBreaker.ts  database.ts  db.ts  generateKeypair.ts  mongodb.ts  rateLimit.ts  raydiumMarketDetector.ts  redis.ts  riskManager.ts  sentry.ts  socialVerification.ts  telegramBot.ts  tradingBot.ts  types.ts  wallet.ts
