[package]
name = "jupiter-dex"
version = "0.1.0"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-solana = { workspace = true }
substreams-entity-change = { workspace = true }
substreams-solana-program-instructions = { workspace = true }
derive_deserialize = { path = "../derive_deserialize" }
prost = "0.11"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
num-bigint = "0.4"
num-traits = "0.2"

